# options_and_pushes

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  prod.env
backend/: Dockerfile  gunicorn_run.sh
backend/src/: pyproject.toml  requirements.txt  setup.cfg
backend/src/base/: admin.py  forms.py  urls.py  views.py
backend/src/base/migrations/: 0001_initial.py  0002_auto_20200624_1723.py  0003_auto_20200625_1630.py
backend/src/base/models/: __init__.py  customuser.py  option.py  push.py
backend/src/base/templates/: index.html  options_confirm_delete.html  options_edit.html  options_list.html
backend/src/base/views/: __init__.py  options.py  pushes.py
backend/src/dj/: settings.py  urls.py
backend/src/templates/adminlte/lib/: _main_sidebar.html
backend/src/templates/registration/: login.html
nginx/: Dockerfile
nginx/conf/: nginx.conf
