[tool.poetry]
name = "dj"
version = "0.1.0"
description = ""
authors = ["Alexander Golovnya <algol.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.13"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
django-debug-toolbar = "^2.2"
flake8 = "^3.8.3"
gunicorn = "^20.0.4"
django-adminlte2 = "^0.4.3"
Pillow = "^8.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
